--- a/src/components/InfoBlock/InfoBlock.module.scss
+++ b/src/components/InfoBlock/InfoBlock.module.scss
@@ -9,6 +9,12 @@
     border-radius: 5px;
     overflow: hidden;
     height: 155px;
+
+    img {
+      object-fit: cover;
+      width: 200px;
+      height: 155px;
+    }
   }
 
   &__title {
