--- a/src/components/PlayerBlock/PlayerBlock.module.scss
+++ b/src/components/PlayerBlock/PlayerBlock.module.scss
@@ -9,6 +9,12 @@
     height: 155px;
     border-radius: 10px;
     overflow: hidden;
+
+    img {
+      object-fit: cover;
+      width: 200px;
+      height: 155px;
+    }
   }
 
   &__player-container {
